--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <li class="nav-item fw-bold">
               <a class="nav-link" href="#sobre-o-cinema">
                 <i class="bi bi-house-door me-1"></i>
-                Sobre o restaurante.
+                Sobre o cinema.
               </a>
             </li>
             <li class="nav-item fw-bold">
