--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                     <div class="col-md-3">
                       <img
                         class="d-block w-100"
-                        src="images/movies/flash.webp"
+                        src="images/movies/flash.jpeg"
                         alt="The Flash (2023)"
                       />
                       <h5 class="text-colored fw-bold mt-2">
